// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GasEstimateBadge.tsx renders a trade 1`] = `
<DocumentFragment>
  .c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  -webkit-filter: none;
  filter: none;
  opacity: 1;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.c0 {
  display: inline-block;
  height: inherit;
}

.c5 {
  border-radius: 8px;
  padding: 4px 6px;
  height: 24px;
  color: #98A1C0;
  background-color: #F5F6FC;
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  margin-right: 4px;
  height: 14px;
}

.c6 > * {
  stroke: #98A1C0;
}

@media (max-width:500px) {

}

<div
    class="c0"
  >
    <div>
      <div
        class="c1"
      >
        <div
          class="c2 c3 c4 c5"
        >
          <svg
            class="c6"
          >
            gas-icon.svg
          </svg>
          $1.00
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GasEstimateBadge.tsx renders loading state 1`] = `
<DocumentFragment>
  .c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
  opacity: 0.4;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.c0 {
  display: inline-block;
  height: inherit;
}

.c5 {
  border-radius: 8px;
  padding: 4px 6px;
  height: 24px;
  color: #98A1C0;
  background-color: #F5F6FC;
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  margin-right: 4px;
  height: 14px;
}

.c6 > * {
  stroke: #98A1C0;
}

<div
    class="c0"
  >
    <div>
      <div
        class="c1"
      >
        <div
          class="c2 c3 c4 c5"
        >
          <svg
            class="c6"
          >
            gas-icon.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
